--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
-		<link rel="stylesheet" href="tailwind.css">
+		<link rel="stylesheet" href="/tailwind.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.css'>
 		<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
